# CS-1342

./: README.md
Program1_Chou/: CMakeLists.txt  main.cpp
Program2_Chou/: CMakeLists.txt  Function.cpp  Function.h  main.cpp
Program3_Chou/: CMakeLists.txt  Function.cpp  Function.h  main.cpp
Program4_Chou/: CMakeLists.txt  FirstFirework.cpp  FirstFirework.h  FourthFirework.cpp  FourthFirework.h  OtherFunctions.cpp  OtherFunctions.h  SecondFirework.cpp  SecondFirework.h  ThirdFirework.cpp  ThirdFirework.h  main.cpp
Program5_Chou/: CMakeLists.txt  Contact.cpp  Contact.h  Rolodex.cpp  Rolodex.h  data.csv  data_small.csv  main.cpp
Program6_Chou/: CMakeLists.txt  Pixel.h  Renderer.cpp  Renderer.h  main.cpp
