cmake_minimum_required(VERSION 2.8)
project(Program4_Chou)

set(CMAKE_CXX_STANDARD 14)

add_executable(Program4_Chou main.cpp FirstFirework.cpp FirstFirework.h SecondFirework.cpp SecondFirework.h ThirdFirework.cpp ThirdFirework.h FourthFirework.cpp FourthFirework.h OtherFunctions.cpp OtherFunctions.h)
